<resources>
    <string name="app_name">奇云影视</string>
    <string name="company_name">奇云科技有限公司</string>
    <string name="open_url">Open Url</string>
    <string name="player_seting">Setting</string>
    <string name="refresh">Refresh</string>

    <string name="root_path">/</string>
    <string name="go_back_to_parent_folder">返回上一级目录</string>
    <string name="empty" translatable="false"></string>

    <string name="PLAYRT_SETTING">设置</string>
    <string name="title_activity_player">PlayerActivity</string>
    <string name="dummy_button">自动隐藏</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="PLAYRT_PLAY">播放</string>
    <string name="PLAYRT_PAUSE">暂停</string>
    <string name="PLAYRT_RESTART">重置</string>
    <string name="title_activity_settings">设置</string>

    <string name="PREF_HARD_WARE_SETTING">硬解设置</string>
    <string name="PREF_HARD_WARE_DECODE_USE">启用硬解</string>
    <!--<string name="PREF_HARD_WARE_DECODE_SUPPORT">HardWareDecodSupport</string>-->
    <string name="PREF_HARD_WARE_DECODE_DETEC">侦测硬解是否可用</string>

    <string name="PREF_HTTP_PARAM">HTTP参数</string>
    <string name="PREF_HTTP_COOKIE">Cookie</string>
    <string name="PREF_HTTP_REFERER">Referer</string>
    <string name="PREF_HTTP_CUSTOM_HEADERS">CustomHeaders</string>
    <string name="PREF_HTTP_USER_AGENT">UserAgent</string>

    <string name="PREF_NET_PARAM">网络设置</string>
    <string name="PREF_NET_BUFFER_ENTER">进入缓冲门限(ms)</string>
    <string name="PREF_NET_BUFFER_LEAVE">缓冲离开门限(package)</string>
    <string name="PREF_NET_BUFFER_READ">预加载帧大小(package)</string>
    <string name="PREF_NET_SEEKBUFFER_WAITTIME">偏移后进入缓冲前置时间(ms)</string>
    <string name="PREF_NET_BUFFER_READ_TIME">预加载时间(ms)</string>

    <string name="PREF_VR_PARAM">VR设置</string>
    <string name="PREF_VR_ENABLE">启用VR</string>
    <string name="PREF_VR_MODE">VR模式</string>
    <!--<string name="PREF_VR_ROTATE">VRRotate</string>-->
    <string name="PREF_VR_FOVY">VR视角</string>
    <string name="PREF_VR_INNER_TOUCH_ROTATE">VR触摸旋转</string>

    <string name="POPWND_VIDEO_DECODE">解码器</string>
    <string name="POPWND_VIDEO_DECODE_HARDWARE">硬解</string>
    <string name="POPWND_VIDEO_DECODE_SOFTWARE">软解</string>

    <string name="POPWND_VIDEO_RATIO">画面比例</string>
    <string name="POPWND_VIDEO_RATIO_FULL_SCREEN">全屏</string>
    <string name="POPWND_VIDEO_RATIO_NATIVE">原始比例</string>

    <string name="POPWND_AUDIO">音轨</string>

    <string name="POPWND_SUBTITLE">字幕</string>
    <string name="POPWND_SUBTITLE_USABLE">字幕可用</string>
    <string name="POPWND_SUBTITLE_SHOW">显示字幕</string>
    <string name="POPWND_SUBTITLE_EXT_NAME">支持类型</string>
    <string name="POPWND_SUBTITLE_FILE_PATH">字幕路径</string>
    <string name="POPWND_SUBTITLE_LIST">字幕列表</string>

    <string name="action_settings">设置</string>


    <!--搜索-->
    <string name="action_voice_rec">action voice rec</string>
    <string name="action_location">action location</string>
    <string name="action_taxi">action taxi</string>
    <string name="action_change_colors">change style</string>
    <string name="color_info">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula,</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="action_example_with_sliding_list">Sliding list</string>
    <string name="action_example_sliding_search_bar">Sliding search view</string>
    <string name="random_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus dictum lorem ac leo tincidunt varius. Donec lacinia elementum lobortis. Nulla pellentesque cursus sem. Aliquam vestibulum lacinia metus, ac faucibus nunc fringilla a. Nullam mauris lorem, pharetra vitae mollis in, gravida a mi. Sed eu elit vitae lorem vestibulum volutpat eget blandit tortor. Duis dignissim porta dolor, ut porttitor lectus pretium vitae.  Phasellus quis augue ante. Nam tempus egestas consectetur. Praesent nec placerat nisi, non malesuada dolor. Duis malesuada semper lorem, nec feugiat nisl. Nulla facilisi. Sed aliquam ex ut turpis malesuada dignissim. Nam risus mi, dapibus maximus nisl ac, efficitur suscipit ex. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec malesuada nisl eget faucibus mollis. Nam sit amet mauris a metus euismod porttitor et sed mi. Nunc vel vehicula arcu, eu lacinia odio. Fusce id lacus vel dui blandit maximus id eget neque.  Sed eu porta diam. Nunc vitae egestas diam. Donec semper hendrerit laoreet. Aliquam quis aliquam nulla. Aenean euismod lacus sed pretium scelerisque. Suspendisse mollis arcu at ligula pulvinar, nec elementum velit fermentum. Sed sed mollis ligula, vel eleifend metus. Sed magna metus, tempus ut bibendum at, aliquam at nisi. Integer nec fringilla mauris, vel viverra augue. Morbi eu mi mauris. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.  Proin molestie ante nec tristique finibus. In hac habitasse platea dictumst. Maecenas sed risus condimentum, feugiat velit ac, dictum erat. Curabitur pharetra ac nulla sed lacinia. Curabitur rutrum dolor vestibulum magna ultrices congue ac sed libero. Nam semper mi a neque ultricies commodo. In condimentum in odio in porttitor. Suspendisse maximus vestibulum nunc, vel gravida dui fermentum eu. Morbi sed orci augue. Praesent dolor justo, cursus sit amet ex et, posuere mattis lorem. Donec in efficitur orci. Nam semper odio a interdum aliquet. Vivamus vitae luctus purus, in fermentum diam. Pellentesque quis orci vitae est placerat faucibus. Maecenas non gravida ipsum, sit amet ultrices sem. Phasellus fringilla ultrices erat, vel aliquam sapien varius ac.  Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aliquam porta semper sapien. Pellentesque volutpat porta sapien, ut tristique metus. In hac habitasse platea dictumst. Aenean pharetra molestie dapibus. Nunc sed dolor elit. Quisque eget enim non tellus volutpat mollis a id dolor. Aenean sit amet sem sem. Nunc viverra efficitur lorem. Quisque quis metus dictum, mattis ante non, pellentesque sapien. Integer quis lectus feugiat, consectetur nulla quis, viverra nulla. Curabitur eu sodales nisl. Morbi non enim pellentesque, lobortis est id, dignissim mauris. Nulla et tempor lectus.
Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus dictum lorem ac leo tincidunt varius. Donec lacinia elementum lobortis. Nulla pellentesque cursus sem. Aliquam vestibulum lacinia metus, ac faucibus nunc fringilla a. Nullam mauris lorem, pharetra vitae mollis in, gravida a mi. Sed eu elit vitae lorem vestibulum volutpat eget blandit tortor. Duis dignissim porta dolor, ut porttitor lectus pretium vitae.  Phasellus quis augue ante. Nam tempus egestas consectetur. Praesent nec placerat nisi, non malesuada dolor. Duis malesuada semper lorem, nec feugiat nisl. Nulla facilisi. Sed aliquam ex ut turpis malesuada dignissim. Nam risus mi, dapibus maximus nisl ac, efficitur suscipit ex. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec malesuada nisl eget faucibus mollis. Nam sit amet mauris a metus euismod porttitor et sed mi. Nunc vel vehicula arcu, eu lacinia odio. Fusce id lacus vel dui blandit maximus id eget neque.  Sed eu porta diam. Nunc vitae egestas diam. Donec semper hendrerit laoreet. Aliquam quis aliquam nulla. Aenean euismod lacus sed pretium scelerisque. Suspendisse mollis arcu at ligula pulvinar, nec elementum velit fermentum. Sed sed mollis ligula, vel eleifend metus. Sed magna metus, tempus ut bibendum at, aliquam at nisi. Integer nec fringilla mauris, vel viverra augue. Morbi eu mi mauris. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.  Proin molestie ante nec tristique finibus. In hac habitasse platea dictumst. Maecenas sed risus condimentum, feugiat velit ac, dictum erat. Curabitur pharetra ac nulla sed lacinia. Curabitur rutrum dolor vestibulum magna ultrices congue ac sed libero. Nam semper mi a neque ultricies commodo. In condimentum in odio in porttitor. Suspendisse maximus vestibulum nunc, vel gravida dui fermentum eu. Morbi sed orci augue. Praesent dolor justo, cursus sit amet ex et, posuere mattis lorem. Donec in efficitur orci. Nam semper odio a interdum aliquet. Vivamus vitae luctus purus, in fermentum diam. Pellentesque quis orci vitae est placerat faucibus. Maecenas non gravida ipsum, sit amet ultrices sem. Phasellus fringilla ultrices erat, vel aliquam sapien varius ac.  Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aliquam porta semper sapien. Pellentesque volutpat porta sapien, ut tristique metus. In hac habitasse platea dictumst. Aenean pharetra molestie dapibus. Nunc sed dolor elit. Quisque eget enim non tellus volutpat mollis a id dolor. Aenean sit amet sem sem. Nunc viverra efficitur lorem. Quisque quis metus dictum, mattis ante non, pellentesque sapien. Integer quis lectus feugiat, consectetur nulla quis, viverra nulla. Curabitur eu sodales nisl. Morbi non enim pellentesque, lobortis est id, dignissim mauris. Nulla et tempor lectus.</string>
    <string name="action_example_scrolling_search_bar">scrolling behavior</string>




    <string name="login_success">login success</string>
    <string name="login">LOGIN</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="go">GO</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="next">NEXT</string>
    <string name="register">REGISTER</string>













</resources>
